Changes
=======

1.0.9 (2019-10-25)
------------------

Bug fixes:

- Delegate test of the environment for existing session credentials to the
  session class to generalize credentialization of GDAL to cloud providers
  other than AWS (#1520). The env.hascreds function is no longer used in
  Rasterio and has been marked as deprecated.
- Switch to use of botocore Credentials.get_frozen_credentials (#1521).
- Numpy masked arrays with the normal Numpy mask sense (True == invalid) are
  now supported as input for feature.shapes(). The mask keyword argument of the
  function keeps to the GDAL sense of masks (nonzero == invalid) and the
  documentation has been improved to communicate this (#1517).
- The defaults for WarpedVRT's `src_nodata` and `nodata` keyword arguments are
  no longer None, but are markers for the default behavior: inheritance of
  nodata values from the VRT's source dataset. Values of `None` for these
  keyword arguments means that the VRT does not inherit from the source and has
  no nodata value at all (#1503).
- WEBP has been added to the Compression enum. Exploitation of this new
  compression mode will require GDAL 2.4.
- Rasterio now check for two AWS environment variables before creating a
  session (#1494).
- The ensure_env_with_credentials decorator which wraps rasterio.open will no
  longer clobber the credentials in a surrounding environment or seek
  credentials when they already exist (#1507).
- The comparison of CRS objects to dicts and strs that we pledged to remove at
  1.0 has at last been removed (#1492).

1.0.8 (2018-10-02)
------------------

Bug fixes:

- Datasets contained in MemoryFile buffers are now opened in r+ or w+ mode
  instead of r or w.
- The namedtuple _asdict method is overridden in BoundingBox to work around a
  bug in Python 3.4.3 (#1486, #1488). This unblocks creation of manylinux1
  wheels for Python 3.4.

1.0.7 (2018-09-26)
------------------

Bug fixes:
