@@ -1,6 +1,13 @@
 Changes
 =======
 
+Next
+----
+
+Bug fixes:
+
+- Add missing raster offsets and scales properties (#1527).
+
 1.0.9 (2019-10-25)
 ------------------
 
